@@ -1,4 +1,4 @@
-/* inmemoryalltermslist.cc
+/* inmemory_alltermslist.cc
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2003,2004,2007,2008,2009 Olly Betts
