@@ -1,3 +1,9 @@
+Thu Jul 19 05:32:04 GMT 2012  Olly Betts <olly@survex.com>
+
+	* backends/brass/brass_dbcheck.h,
+	  backends/inmemory/inmemory_alltermslist.cc,bin/xapian-delve.cc: Fix
+	  filenames in comments which mismatch actual name of file.
+
 Thu Jul 19 05:27:38 GMT 2012  Olly Betts <olly@survex.com>
 
 	* queryparser/termgenerator_internal.cc: Remove "FIXME: Add API to
